--- a/package.json
+++ b/package.json
@@ -1,14 +1,48 @@
 {
   "name": "particles-rds",
-  "version": "0.0.0",
-  "description": "[Condensation](https://github.com/SungardAS/condensation) particles that build AWS CloudFormation templates.",
-  "license": "Apache-2.0",
+  "version": "0.1.0-beta.0",
+  "publishConfig": {
+    "tag": "beta"
+  },
+  "description": "Condensation particles for AWS RDS",
+  "scripts": {
+    "test": "./node_modules/.bin/mocha",
+    "build": "./node_modules/.bin/gulp condensation:build",
+    "deploy": "./node_modules/.bin/gulp condensation:deploy",
+    "gulp": "./node_modules/.bin/gulp"
+  },
+  "author": {
+    "name": "Kevin McGrath",
+    "email": "kevin.mcgrath@sungardas.com"
+  },
+  "bugs": {
+    "url": "https://github.com/sungardas/particles-rds/issues"
+  },
+  "homepage": "https://github.com/sungardas/particles-rds",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sungardas/particles-rds.git"
+  },
   "keywords": [
-    "condensation-particles"
+    "condensation-particles",
+    "condensation",
+    "cloudformation",
+    "cloud",
+    "formation",
+    "aws",
+    "rds"
   ],
+  "license": "Apache-2.0",
   "dependencies": {
-    "condensation": "^0.4.9",
-    "config": "^1.16.0",
-    "gulp": "^3.9.0"
+    "condensation": "^0.5.4",
+    "config": "^1.20.1",
+    "git-rev-sync": "^1.6.0",
+    "gulp": "^3.9.1",
+    "particles-core": "^0.4.3",
+    "particles-vpc": "sungardas/particles-vpc#develop"
+  },
+  "devDependencies": {
+    "condensation-particle-tests": "^0.5.1",
+    "mocha": "^2.4.5"
   }
 }
