--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "particles-rds",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0",
   "publishConfig": {
-    "tag": "beta"
+    "tag": "latest"
   },
   "description": "Condensation particles for AWS RDS",
   "scripts": {
@@ -35,14 +35,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "condensation": "^0.5.5",
-    "config": "^1.20.1",
+    "config": "^1.21.0",
     "git-rev-sync": "^1.6.0",
     "gulp": "^3.9.1",
-    "particles-core": "^0.4.3",
-    "particles-vpc": "0.5.0-rc7"
+    "particles-core": "^0.4.5",
+    "particles-vpc": "^0.5.0"
   },
   "devDependencies": {
-    "condensation-particle-tests": "^0.5.1",
-    "mocha": "^2.4.5"
+    "condensation-particle-tests": "^0.5.2",
+    "mocha": "^2.5.3"
   }
 }
